Restore chat interface

--- a/sources/client/index.html
+++ b/sources/client/index.html
@@ -54,4 +54,4 @@
 </html>
 
 <!-- On va chercher socket.io.js -->
-<script src="/socket.io/socket.io.js"></script>
+<script src="./index.js" type="module"></script>
