--- a/sources/client/chat/index.html
+++ b/sources/client/chat/index.html
@@ -54,4 +54,5 @@
 </html>
 
 <!-- On va chercher socket.io.js -->
-<script src="./index.js" type="module"></script>
+<script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+<script src="index.js"></script>
